One more thing in diagram and starting model constraints

--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -1,4 +1,4 @@
-\documentclass[english,peerreview]{sareport}
+\documentclass[english]{sareport}
 % use the option peerreview for creating an anonymized version of your report
 % E.g., \documentclass[english,peerreview]{sareport}
 
@@ -39,7 +39,7 @@ This section shows the domain model(s).
 In this section we provide additional domain constraints.
 
 \begin{itemize}
-    \item This is a first constraint.
+    \item A customer organization can only subscribe to an application that is already registered with the system.
     \item This is a second constraint.
 \end{itemize}
 
